// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockVault renders component 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <WithStyles(Grid)
    alignItems="center"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <VaultUnlocker />
  </WithStyles(Grid)>
</Memo(WithStyles(WindowWrapper))>
`;

exports[`UnlockVault renders unlocked 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <WithStyles(Grid)
    alignItems="center"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <VaultUnlocker />
  </WithStyles(Grid)>
  <Countdown
    date={1536662639084}
    renderer={[Function]}
  />
</Memo(WithStyles(WindowWrapper))>
`;
